syntax = "proto3";
option go_package = "./proto";

package proto;

message RegisterRequest {
    string userName = 1;
    string password = 2;
    string email = 3;
}

message SuccessResponse {
    string message = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
}

message VerifyRequest {
    string token = 1;
}

message VerifyResponse {
    string message = 1;
}

message LogoutRequest {
    string token = 1;
}

service auth {
    rpc Register(RegisterRequest) returns (SuccessResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Verify(VerifyRequest) returns (VerifyResponse);
    rpc Logout(LogoutRequest) returns (SuccessResponse);
}

